# dynamic_structures

./: .gitignore  CMakeLists.txt  dataArray.c  dataArray.h  dynamic_structures.sln  dynamic_structures.vcxproj  dynamic_structures.vcxproj.filters  funcArray.c  funcArray.h  hashArray.c  hashArray.h  main.c  stdint.h  stringTools.c  stringTools.h
dynamic_.8E4A125C/x64/Debug/: dynamic_structures.exe.recipe
dynamic_.8E4A125C/x64/Debug/dynamic_.8E4A125C.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dynamic_.8E4A125C/x64/Release/: dynamic_structures.exe.recipe
dynamic_.8E4A125C/x64/Release/dynamic_.8E4A125C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
testApp/: main.c  ownArray.h  refArray.c  refArray.h  testApp.vcxproj  testApp.vcxproj.filters  value.h
testApp/x64/Debug/: dataarray.obj.enc  testApp.exe.recipe
testApp/x64/Debug/testApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  testApp.lastbuildstate
testApp/x64/Release/: testApp.exe.recipe  testApp.iobj  testApp.ipdb
testApp/x64/Release/testApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  testApp.lastbuildstate
